--- a/auto_invoice_adjustment/views/account_move.xml
+++ b/auto_invoice_adjustment/views/account_move.xml
@@ -7,7 +7,7 @@
             <field name="inherit_id" ref="account.view_move_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//group[@name='sale_info_group']/field[@name='ref']" position="after">
-                    <field name="adjust_move_id"/>
+                    <field name="adjust_move_id" readonly="1" force_save="1"/>
                     <field name="llc_currency_rate" invisible="1"/>
                 </xpath>
             </field>
