--- a/auto_invoice_adjustment/views/account_move.xml
+++ b/auto_invoice_adjustment/views/account_move.xml
@@ -6,7 +6,11 @@
             <field name="model">account.move</field>
             <field name="inherit_id" ref="account.view_move_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//group[@name='sale_info_group']/field[@name='ref']" position="after">
+                <xpath expr="//button[@name='action_post']" position="after">
+                    <button name="adjust_invoice" type="object" string="Adjust"
+                            attrs="{'invisible': ['|', ('adjust_move_id', '!=', False), ('move_type', 'not in', ['in_invoice', 'out_invoice'])]}"/>
+                </xpath>
+                <xpath expr="//group[@name='accounting_info_group']/field[@name='company_id']" position="after">
                     <field name="adjust_move_id" readonly="1" force_save="1"/>
                     <field name="llc_currency_rate" invisible="1"/>
                 </xpath>
