--- a/auto_invoice_adjustment/reports/account_move.xml
+++ b/auto_invoice_adjustment/reports/account_move.xml
@@ -17,7 +17,7 @@
 
         <template inherit_id="account.tax_groups_totals" id="tax_groups_totals_adjust">
             <xpath expr="//t[@t-else='']/td[1]" position="inside">
-                <t t-if "doc">
+                <t t-if="doc">
                     <t t-set "o" t-value="doc"/>
                 </t>
                 <t t-if="o.adjust_move_id">
