--- a/auto_invoice_adjustment/reports/account_move.xml
+++ b/auto_invoice_adjustment/reports/account_move.xml
@@ -17,16 +17,13 @@
 
         <template inherit_id="account.tax_groups_totals" id="tax_groups_totals_adjust">
             <xpath expr="//t[@t-else='']/td[1]" position="inside">
-                <t t-if="doc">
-                    <t t-set="o" t-value="doc"/>
-                </t>
-                <t t-if="o.adjust_move_id">
+                <t t-if="o and o.adjust_move_id">
                     @ Sayrafa rate <span class="text-nowrap" t-esc="round(o.llc_currency_rate)"/>
                 </t>
             </xpath>
             <xpath expr="//t[@t-else='']/td[2]" position="replace">
                 <td class="text-end o_price_total">
-                    <t t-if="o.adjust_move_id">
+                    <t t-if="o and o.adjust_move_id">
                         <span class="text-nowrap" t-esc="round(o.lls_tax_amount)" t-options='{"widget": "monetary", "display_currency": o.lbp_currency_id}'/>
                     </t>
                     <t t-else="">
