--- a/auto_invoice_adjustment/reports/account_move.xml
+++ b/auto_invoice_adjustment/reports/account_move.xml
@@ -3,7 +3,7 @@
     <data>
         <template inherit_id="account.document_tax_totals" id="document_tax_totals_adjust">
             <xpath expr="//tr[hasclass('o_total')]" position="replace">
-                <t t-if="not o.adjust_move_id">
+                <t t-if="doc or (o and not o.adjust_move_id)">
                     <tr class="border-black o_total">
                         <t t-if="has_rounding"><td>Total</td></t>
                         <t t-else=""><td><strong>Total</strong></td></t>
@@ -17,13 +17,13 @@
 
         <template inherit_id="account.tax_groups_totals" id="tax_groups_totals_adjust">
             <xpath expr="//t[@t-else='']/td[1]" position="inside">
-                <t t-if="o.adjust_move_id">
+                <t t-if="o and o.adjust_move_id">
                     @ Sayrafa rate <span class="text-nowrap" t-esc="round(o.llc_currency_rate)"/>
                 </t>
             </xpath>
             <xpath expr="//t[@t-else='']/td[2]" position="replace">
                 <td class="text-end o_price_total">
-                    <t t-if="o.adjust_move_id">
+                    <t t-if="o and o.adjust_move_id">
                         <span class="text-nowrap" t-esc="round(o.lls_tax_amount)" t-options='{"widget": "monetary", "display_currency": o.lbp_currency_id}'/>
                     </t>
                     <t t-else="">
